2006-04-20  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: Handle marker type in UI
	* src/DataViews/_FamilyViews.py: clean up
	* src/DataViews/_PedigreeViews.py: clean up
	* src/RelLib/_Name.py: fix type on set_type

2006-04-20  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Upgrade to new types.
	* src/GrampsDb/_ReadGedcom.py: Adapt to new types.
	* src/RelLib/_Event.py: Properly set type.
	* src/RelLib/_EventRef.py: Properly set type.
	* src/RelLib/_Family.py: Properly set type.
	* src/RelLib/_Name.py: Properly set type.
	* src/RelLib/_Person.py: Properly set type.
	* src/RelLib/_PrimaryObject.py: Properly set type.
	* src/RelLib/_RepoRef.py: Properly set type.
	* src/RelLib/_Repository.py: Properly set type.
	* src/RelLib/_Url.py: Properly set type.

2006-04-20  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/ODFDoc.py: Fix space at begining of paragraph

2006-04-20  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: fix display of shared info warning box
	* src/Editors/_EditSourceRef.py: fix display of shared info warning box
	* src/Editors/_EditReference.py: fix display of shared info warning box
	* src/Editors/_EditSource.py: fix display of shared info warning box
	* src/Editors/_EditMediaRef.py: fix display of shared info warning box
	* src/Editors/_EditEventRef.py: fix display of shared info warning box
	* src/Editors/_EditRepository.py: fix display of shared info warning box
	* src/Editors/_EditMedia.py: fix display of shared info warning box
	* src/Editors/_EditEvent.py: fix display of shared info warning box
	* src/DisplayTabs.py: fix display of shared info warning box

2006-04-20  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_EventRef.py (unserialize): Avoid class constructor.
	* src/RelLib/_Person.py (unserialize): Avoid class constructor.
	* src/RelLib/_Name.py (unserialize): Avoid class constructor.